<resources>
    <string name="app_name">QMS</string>

    <string name="title_profile">Profile</string>
    <string name="title_join">Join</string>
    <string name="title_status">Status</string>
    <string name="splash_string">Splash</string>

    <string name="login_string">Login</string>
    <string name="password_string">Password</string>
    <string name="sign_in_string">Sign in</string>
    <string name="show_scheme">Show scheme</string>
    <string name="invite_code">Invite code</string>
    <string name="join_string">Join</string>
    <string name="profile_string_name">Name:</string>
    <string name="profile_rating_postfix">/ 5.00</string>
    <string name="logout_string">Logout</string>
    <string name="settings_string">Settings</string>

    <string name="version">Version:</string>

    <string name="profile_passport">Passport</string>
    <string name="profile_international_passport">International passport</string>
    <string name="profile_health_insurance">Health insurance policy</string>
    <string name="profile_tin">TIN</string>
    <string name="profile_document_number">Number:</string>
    <string name="add_document">Add new document</string>
    <string name="invite_step_action_text">Enter invite code to join queue</string>
    <string name="register_string">Register</string>

    <string name="name_hint_string">Name</string>
    <string name="surname_hint_string">Last name</string>
    <string name="email_hint_string">Email</string>
    <string name="password_hint_string">Password</string>

    <string name="registration_page_title">Create your account</string>

    <string name="status_suggests_header">You have zero appointments, here is list for you:</string>
    <string name="to_exp_string">to exp</string>
    <string name="description_string">Description</string>
    <string name="before_visit_string">Before visit</string>
    <string name="leave_feedback_string">Leave feedback</string>
    <string name="leave_string">Leave</string>

    <string name="ready_to_leave">Are you sure you want to leave queue?</string>

    <string name="resolution_gone">You\'ve left queue</string>
    <string name="resolution_kicked">You have been kicked</string>
    <string name="resolution_serviced">Latest appointment</string>
    <string name="resolution_not_serviced">Latest appointment</string>

    <string name="change_avatar">Change avatar</string>
    <string name="new_avatar_url">Avatar image url</string>
</resources>
