<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/joinIcon"
            android:layout_width="wrap_content"
            android:layout_height="96dp"
            app:tint="@color/colorPrimary"
            app:srcCompat="@drawable/icon_join" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/join_action_text_size"
            android:fontFamily="@font/montserrat_light"
            android:layout_marginTop="@dimen/indent"
            android:text="@string/invite_step_action_text" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_height="wrap_content"
            android:labelFor="@id/inviteField"
            android:hint="@string/invite_code"
            android:layout_marginTop="@dimen/indent"
            android:layout_width="300dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/inviteField"
                android:inputType="textCapCharacters" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/joinButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/indent"
            android:text="@string/join_string" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
